include_directories(../include)
#add_library(vanilla SHARED vanilla.cpp)
add_library(opcodeCC SHARED OpCodeCounter.cpp)
add_library(DeadCodeElimination SHARED DeadCodeElimination.cpp)
add_library(LivenessAnalysis SHARED LivenessAnalysis.cpp)
add_library(stronglyLiveness SHARED StronglyLivenessAnalysis.cpp)